--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,70 @@
-*{
-    margin: 0;
-    padding: 0;
+/* **********
+ CONFIGURAÇÕES GERAIS
+*/
+body{
+    font-family: system-ui, -apple-system, 'Helvetica', Arial, sans-serif;
 }
+
+a{
+    color: #fff;
+    text-decoration: none;
+    transition: .3s;
+}
+
+a:hover{
+    opacity: .7;
+}
+
+.logo{
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+
+nav{
+    background-color: #23232e;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 8vh;
+    border-bottom: 1px solid #fff;
+
+}
+
+main{
+    background: #000;
+    background-size: cover;
+
+}
+
+/* **********
+ CONFIGURAÇÕES DO MENU MOBILE SANDWICH
+*/
+
+.mobile-menu{
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-menu div{
+    width: 32px;
+    height: 2px;
+    background-color: #fff;
+    margin: 8px;
+    transition: .3s;
+}
+
+/* **********
+ CONFIGURAÇÕES DO MENU PRINCIPAL
+*/
+
+.nav-list{
+    list-style: none;
+    display: flex;
+}
+.nav-list li{
+    letter-spacing: 3px;
+    margin-left: 32px;
+    text-transform: capitalize;
+}
+
