adicao de redes de contatos e descrição

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ main{
 }
 
 #lateral{
-    border: 1px solid blue;
+    background-color: rgba(35, 35, 46, 0.7);
     width: 29vw;
     text-align: center;
 }
@@ -109,7 +109,6 @@ main{
 }
 
 .profile-contact-list{
-    border: 1px solid yellow;
     padding: 0;
     display: flex;
     justify-content: space-evenly;
@@ -119,6 +118,12 @@ main{
     list-style: none;
 }
 
+.profile-contact-list li i{
+    padding: 5px;
+    font-size: 1.5em;
+    border: 2px solid #fff;
+    border-radius: 50%;
+}
 .profile-text{
     text-align: justify;
     margin: auto 20px;
