--- a/css/style.css
+++ b/css/style.css
@@ -229,4 +229,35 @@ footer a:hover{
     .custom-project{
         margin: 10px auto;
     }
+
+
+    /* **********
+        MOBILE MENU
+    */
+
+    .mobile-menu{
+        display: block;
+    }
+
+    .nav-list{
+        position: absolute;
+        top: 5vh;
+        right: 0;
+        width: 50vw;
+        height: 92vh;
+        background-color: #23232e;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+    }
+
+    .nav-list li{
+        margin: 0;
+        opacity: 0;
+    }
+
+    
 }
