--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ footer a:hover{
         top: 5vh;
         right: 0;
         width: 50vw;
-        height: 92vh;
+        height: 95vh;
         background-color: #23232e;
 
         display: flex;
@@ -252,12 +252,15 @@ footer a:hover{
         align-items: center;
         justify-content: space-around;
         transform: translateX(100%);
+        transition: transform .3s ease-in;
     }
 
     .nav-list li{
         margin: 0;
-        opacity: 0;
+        
     }
 
-    
+    .nav-list.active{
+        transform: translate(0);
+    }
 }
