--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* **********
  CONFIGURAÇÕES GERAIS
 */
-body{
+html, body{
     font-family: system-ui, -apple-system, 'Helvetica', Arial, sans-serif;
     color: #fff;
 }
@@ -222,8 +222,12 @@ footer a:hover{
     /* **********
      TODAS AS PÁGINAS
     */
-    body{
-        overflow-x: hidden;
+    html, body{
+        overflow-x: hidden; 
+        position: relative;
+        top: 0;
+        left: 0;
+
     }
     
     main{
@@ -298,7 +302,6 @@ footer a:hover{
         width: 50vw;
         height: 95vh;
         background-color: #23232e;
-
         display: -webkit-box;
 
         display: -ms-flexbox;
