--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,9 @@ main{
 /* **********
  CONFIGURAÇÕES DO MENU PRINCIPAL
 */
-
+#profile-picture{
+    border: 2px solid #fff;
+}
 .nav-list{
     list-style: none;
     display: -webkit-box;
